--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,44 +2,187 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Register Test</title>
+    <title>Auth Test</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 400px;
+            max-width: 500px;
             margin: 50px auto;
+            background-color: #f5f5f5;
         }
-        input, button {
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        .tabs {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 20px;
+            border-bottom: 2px solid #ddd;
+        }
+        .tab {
+            padding: 10px 20px;
+            cursor: pointer;
+            background: none;
+            border: none;
+            border-bottom: 3px solid transparent;
+            font-size: 16px;
+            font-weight: bold;
+            color: #666;
+        }
+        .tab.active {
+            color: #4CAF50;
+            border-bottom-color: #4CAF50;
+        }
+        .tab-content {
+            display: none;
+        }
+        .tab-content.active {
+            display: block;
+        }
+        input {
             width: 100%;
             padding: 10px;
             margin: 8px 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button.submit {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        button.submit:hover {
+            background-color: #45a049;
+        }
+        h3 {
+            margin-top: 20px;
+            color: #333;
         }
         pre {
             background: #f4f4f4;
-            padding: 10px;
+            padding: 15px;
+            border-radius: 4px;
+            overflow-x: auto;
+            font-size: 12px;
+        }
+        .success {
+            color: green;
+        }
+        .error {
+            color: red;
         }
     </style>
 </head>
 <body>
 
-<h2>Register</h2>
+<div class="container">
+    <h2>Authentication Test</h2>
 
-<input id="name" type="text" placeholder="Name" />
-<input id="email" type="email" placeholder="Email" />
-<input id="password" type="password" placeholder="Password" />
+    <div class="tabs">
+        <button class="tab active" onclick="switchTab('login')">Login</button>
+        <button class="tab" onclick="switchTab('register')">Register</button>
+    </div>
 
-<button onclick="register()">Register</button>
+    <!-- Login Tab -->
+    <div id="login" class="tab-content active">
+        <input id="login-email" type="email" placeholder="Email" />
+        <input id="login-password" type="password" placeholder="Password" />
+        <button class="submit" onclick="login()">Login</button>
+    </div>
 
-<h3>Response</h3>
-<pre id="response"></pre>
+    <!-- Register Tab -->
+    <div id="register" class="tab-content">
+        <input id="register-name" type="text" placeholder="Name (optional)" />
+        <input id="register-email" type="email" placeholder="Email" />
+        <input id="register-password" type="password" placeholder="Password (min 8 chars)" />
+        <button class="submit" onclick="register()">Register</button>
+    </div>
+
+    <h3>Response</h3>
+    <pre id="response">No request sent yet...</pre>
+</div>
 
 <script>
-    async function register() {
-        const name = document.getElementById("name").value;
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
+    function switchTab(tab) {
+        // Hide all tabs
+        document.querySelectorAll('.tab-content').forEach(el => el.classList.remove('active'));
+        document.querySelectorAll('.tab').forEach(el => el.classList.remove('active'));
 
+        // Show selected tab
+        document.getElementById(tab).classList.add('active');
+        event.target.classList.add('active');
+
+        // Clear response
+        document.getElementById('response').textContent = 'No request sent yet...';
+    }
+
+    async function login() {
+        const email = document.getElementById("login-email").value;
+        const password = document.getElementById("login-password").value;
         const responseBox = document.getElementById("response");
+
+        if (!email || !password) {
+            responseBox.textContent = "Please fill in all fields!";
+            responseBox.className = "error";
+            return;
+        }
+
+        try {
+            const response = await fetch("http://localhost:8080/api/v1/auth/login", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    email: email,
+                    password: password
+                })
+            });
+
+            if (!response.ok) {
+                responseBox.className = "error";
+                responseBox.textContent = `Error ${response.status}: ${response.statusText}\n\n${await response.text() || 'Invalid credentials'}`;
+                return;
+            }
+
+            const data = await response.json();
+            responseBox.className = "success";
+            responseBox.textContent = "Login Successful!\n\n" + JSON.stringify(data, null, 2);
+
+        } catch (error) {
+            responseBox.className = "error";
+            responseBox.textContent = "Request failed: " + error.message;
+        }
+    }
+
+    async function register() {
+        const name = document.getElementById("register-name").value;
+        const email = document.getElementById("register-email").value;
+        const password = document.getElementById("register-password").value;
+        const responseBox = document.getElementById("response");
+
+        if (!email || !password) {
+            responseBox.textContent = "Email and password are required!";
+            responseBox.className = "error";
+            return;
+        }
+
+        if (password.length < 8) {
+            responseBox.textContent = "Password must be at least 8 characters!";
+            responseBox.className = "error";
+            return;
+        }
 
         try {
             const response = await fetch("http://localhost:8080/api/v1/auth/register", {
@@ -48,22 +191,24 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    name: name,
+                    name: name || null,
                     email: email,
                     password: password
                 })
             });
 
             if (!response.ok) {
-                responseBox.textContent =
-                    `Error ${response.status}: ${response.statusText}`;
+                responseBox.className = "error";
+                responseBox.textContent = `Error ${response.status}: ${response.statusText}\n\n${await response.text() || 'Registration failed'}`;
                 return;
             }
 
             const data = await response.json();
-            responseBox.textContent = JSON.stringify(data, null, 2);
+            responseBox.className = "success";
+            responseBox.textContent = "Registration Successful!\n\n" + JSON.stringify(data, null, 2);
 
         } catch (error) {
+            responseBox.className = "error";
             responseBox.textContent = "Request failed: " + error.message;
         }
     }
